service.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx
 namespace: casestudy-ns
 labels:
   app: nginx
spec:
 type: NodePort
 selector:
   app: nginx
 ports:
 - nodePort: 31410
   protocol: TCP
   port: 80
   targetPort: 80
