networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-my-webserver
  namespace: casestudy-ns
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
      - ipBlock:
          cidr: 10.2.0.0/8
